// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultCard should render a loading state with isLoading 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    isLoading={true}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "bottom": 0,
            "flex": 1,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          blurRadius={80}
          fadeDuration={250}
          onLoad={[Function]}
          source={Array []}
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          material="regular"
          style={
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "bottom": 0,
              "flex": 1,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Image
        fadeDuration={250}
        isLoading={true}
        onLoad={[Function]}
        source={Array []}
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": null,
              "flexDirection": "row",
            }
          }
        />
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 24,
              "marginVertical": 1.8000000000000007,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 16,
              "marginVertical": 5,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`DefaultCard should render at the images natural aspect ratio (between min/max) 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "bottom": 0,
            "flex": 1,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          blurRadius={80}
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/1400/800/?random",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          material="regular"
          style={
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "bottom": 0,
              "flex": 1,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/1400/800/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          numberOfLines={3}
          style={
            Object {
              "color": "#27272E",
              "fontFamily": "InterUI-Black",
              "fontSize": 24,
              "lineHeight": 27.6,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#27272E",
              }
            }
          >
            Are you telling me that you built a time machine out of a DeLorean?
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`DefaultCard should render at the maxAspectRatio bound (wider than tall) 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "bottom": 0,
            "flex": 1,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          blurRadius={80}
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/2000/800/?random",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          material="regular"
          style={
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "bottom": 0,
              "flex": 1,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/2000/800/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          numberOfLines={3}
          style={
            Object {
              "color": "#27272E",
              "fontFamily": "InterUI-Black",
              "fontSize": 24,
              "lineHeight": 27.6,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#27272E",
              }
            }
          >
            Are you telling me that you built a time machine out of a DeLorean?
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`DefaultCard should render at the minAspectRatio bound (tall-ish) 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "bottom": 0,
            "flex": 1,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          blurRadius={80}
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/800/1600/?random",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          material="regular"
          style={
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "bottom": 0,
              "flex": 1,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          numberOfLines={3}
          style={
            Object {
              "color": "#27272E",
              "fontFamily": "InterUI-Black",
              "fontSize": 24,
              "lineHeight": 27.6,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#27272E",
              }
            }
          >
            Are you telling me that you built a time machine out of a DeLorean?
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`DefaultCard should render with a summary 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "bottom": 0,
            "flex": 1,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          blurRadius={80}
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/800/1600/?random",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          material="regular"
          style={
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "bottom": 0,
              "flex": 1,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            Object {
              "color": "#27272E",
              "fontFamily": "InterUI-Black",
              "fontSize": 24,
              "lineHeight": 27.6,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#27272E",
              }
            }
          >
            Are you telling me that you built a time machine out of a DeLorean?
          </Text>
        </Text>
        <Text
          bold={false}
          italic={false}
          numberOfLines={3}
          style={
            Object {
              "color": "#27272E",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "rgba(39, 39, 46, 0.6)",
              }
            }
          >
            The way I see it, if you’re going to build a time machine into a car, why not do it with some style?
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`DefaultCard should render with custom LabelComponent 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "bottom": 0,
            "flex": 1,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          blurRadius={80}
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/800/1600/?random",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          material="regular"
          style={
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "bottom": 0,
              "flex": 1,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": null,
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "rgba(39, 39, 46, 0.6)",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            Custom LabelComponent
          </Text>
        </View>
        <Text
          numberOfLines={3}
          style={
            Object {
              "color": "#27272E",
              "fontFamily": "InterUI-Black",
              "fontSize": 24,
              "lineHeight": 27.6,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#27272E",
              }
            }
          >
            Are you telling me that you built a time machine out of a DeLorean?
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`DefaultCard should render with custom labelText 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "bottom": 0,
            "flex": 1,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          blurRadius={80}
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/800/1600/?random",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          material="regular"
          style={
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "bottom": 0,
              "flex": 1,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": null,
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "rgba(39, 39, 46, 0.6)",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            Custom label text
          </Text>
        </View>
        <Text
          numberOfLines={3}
          style={
            Object {
              "color": "#27272E",
              "fontFamily": "InterUI-Black",
              "fontSize": 24,
              "lineHeight": 27.6,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#27272E",
              }
            }
          >
            Are you telling me that you built a time machine out of a DeLorean?
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`DefaultCard should render with isLive support 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "bottom": 0,
            "flex": 1,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          blurRadius={80}
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/800/1600/?random",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          material="regular"
          style={
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "bottom": 0,
              "flex": 1,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": null,
              "flexDirection": "row",
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={7}
            bbWidth={7}
            height={7}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "marginRight": 8,
                },
                null,
                Object {
                  "flex": 0,
                  "height": 7,
                  "width": 7,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={7}
          >
            <RNSVGGroup
              fill={
                Array [
                  0,
                  4278190080,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={Array []}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            >
              <RNSVGCircle
                cx="12"
                cy="12"
                fill={
                  Array [
                    0,
                    1294411566,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                r="12"
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <Text
            style={
              Object {
                "color": "rgba(39, 39, 46, 0.6)",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            Live
          </Text>
        </View>
        <Text
          numberOfLines={3}
          style={
            Object {
              "color": "#27272E",
              "fontFamily": "InterUI-Black",
              "fontSize": 24,
              "lineHeight": 27.6,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#27272E",
              }
            }
          >
            Are you telling me that you built a time machine out of a DeLorean?
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`DefaultCard should should render a like icon 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "bottom": 0,
            "flex": 1,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          blurRadius={80}
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/800/1600/?random",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          material="regular"
          style={
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "bottom": 0,
              "flex": 1,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          numberOfLines={3}
          style={
            Object {
              "color": "#27272E",
              "fontFamily": "InterUI-Black",
              "fontSize": 24,
              "lineHeight": 27.6,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#27272E",
              }
            }
          >
            Are you telling me that you built a time machine out of a DeLorean?
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`DefaultCard should should render as isLiked 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "bottom": 0,
            "flex": 1,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          blurRadius={80}
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/800/1600/?random",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          material="regular"
          style={
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "bottom": 0,
              "flex": 1,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          numberOfLines={3}
          style={
            Object {
              "color": "#27272E",
              "fontFamily": "InterUI-Black",
              "fontSize": 24,
              "lineHeight": 27.6,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#27272E",
              }
            }
          >
            Are you telling me that you built a time machine out of a DeLorean?
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "opacity": 1,
              }
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={20}
              bbWidth={20}
              height={20}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  undefined,
                  null,
                  Object {
                    "flex": 0,
                    "height": 20,
                    "width": 20,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={20}
            >
              <RNSVGGroup
                fill={
                  Array [
                    0,
                    4278190080,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                font={Object {}}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={Array []}
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                x={0}
                y={0}
              >
                <RNSVGPath
                  d="M10.8 4.03l-.03.03h.1c.4.3.8.64 1.13 1.03.33-.4.72-.75 1.14-1.05h.1c-.02 0-.03-.02-.04-.03.97-.66 2.13-1.03 3.3-1.03C19.6 3 22 5.4 22 8.47c0 3.8-3.4 6.88-8.6 11.46l-1.4 1.4-1.4-1.4C5.4 15.36 2 12.27 2 8.48 2 5.38 4.4 3 7.5 3c1.17 0 2.33.37 3.3 1.03z"
                  fill={
                    Array [
                      0,
                      1294411566,
                    ]
                  }
                  fillOpacity={1}
                  fillRule={1}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  opacity={1}
                  originX={0}
                  originY={0}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  rotation={0}
                  scaleX={1}
                  scaleY={1}
                  skewX={0}
                  skewY={0}
                  stroke={null}
                  strokeDasharray={null}
                  strokeDashoffset={null}
                  strokeLinecap={0}
                  strokeLinejoin={0}
                  strokeMiterlimit={4}
                  strokeOpacity={1}
                  strokeWidth={1}
                  vectorEffect={0}
                  x={0}
                  y={0}
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <View
              style={
                Object {
                  "width": 5.333333333333333,
                }
              }
            />
            <Text
              style={
                Object {
                  "color": "rgba(39, 39, 46, 0.6)",
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontStyle": null,
                  "fontWeight": null,
                  "lineHeight": 21,
                }
              }
            >
              Like
              d
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;
